# cnc

./: .gitignore  Dockerfile  Dockerfile.docs  README.md  development.md  extract_package_info.py  lint.sh  mkdocs.yml  nginx.conf  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md  DEVELOPERS.md  SECURITY.md
.github/workflows/: lint-and-test.yml  package-cnc.yml  push-builder-image.yml  pypi-release.yml
cnc-customization/: cnc.yml  environments.yml
cncbuilder/: Dockerfile  Dockerfile.base  Dockerfile.dev  README.md
docs/: cli.md  getting-started.md  index.md  toolboxes.md  troubleshooting.md
docs/configuration/: cnc.md  environment_variables.md  environments.md  overview.md  use_existing_vpc.md
docs/customization/: aws_ecs.md  deploy.md  infra_state.md  overview.md  provision.md
docs/examples/: django-gke.md  django.md  fastapi.md  github-actions-workflow.md  nextjs.md
docs/flavors/: developing.md  overview.md
docs/flavors/aws/: ecs.md
docs/flavors/gcp/: gke.md  run-lite.md  run.md
docs/reference architectures/: overview.md
docs/reference architectures/gcp/: gke.md
docs/reference-architectures/: overview.md
docs/reference-architectures/aws/: ecs.md  lambda-lite.md
docs/reference-architectures/gcp/: gke.md  run-lite.md  run.md
docs/stylesheets/: custom.css
overrides/: main.html
overrides/partials/: header.html
src/cnc/: __init__.py  check_dependencies.py  constants.py  logger.py  main.py
src/cnc/commands/: build.py  deploy.py  info.py  provision.py  render.py  shell.py  telemetry.py  toolbox.py  (+1 more)
(+253 files in other folders)
